--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,9 +6,10 @@ description: A sample command-line application.
 environment:
   sdk: '>=2.7.0 <3.0.0'
 
-#dependencies:
-#  path: ^1.6.0
+dependencies:
+  path: ^1.6.4
+  csv: ^4.0.3
 
 dev_dependencies:
-  pedantic: ^1.8.0
-  test: ^1.6.0
+  pedantic: ^1.9.0
+  test: ^1.12.0
