--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,10 @@ environment:
 
 dependencies:
   path: ^1.6.4
-  csv: ^4.0.3
+  json_annotation: ^3.0.1
+  build_runner: ^1.7.4
 
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.12.0
+  json_serializable: ^3.2.5
