--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   path: ^1.6.4
   json_annotation: ^3.0.1
   build_runner: ^1.7.4
+  basic_utils: ^2.4.8
 
 dev_dependencies:
   pedantic: ^1.9.0
